force-app/main/default/objects/GameQuest__c/GameQuest__c.object-meta.xml
<CustomObject>
    <label>Game Quest</label>
    <nameField>
        <displayFormat>GQ-{000000}</displayFormat>
        <label>Game Quest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Quests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>