force-app/main/default/objects/GameQuest__c/fields/Quest__c.field-meta.xml
<CustomField>
    <fullName>Quest__c</fullName>
    <label>Quest</label>
    <referenceTo>Quest__c</referenceTo>
    <relationshipLabel>Game Quests</relationshipLabel>
    <relationshipName>GameQuests</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>